# raspberry_car

./: .gitignore  CMakeLists.txt  install.sh
src/firmware/: firmware.ino
src/include/: actuators.h  defs.h  detector.h  health.h  kalmanfilter.h  lights.h  motors.h  sensors.h
src/main/: actuators.cpp  actuators_old.cpp  camera.cpp  detector.cpp  health.cpp  kalmanfilter.cpp  lights.cpp  main.cpp  motors.cpp  sensors.cpp  web_service.cpp
src/py_modules/: imu_driver.py  mpu6050.py  web_installer.py  web_service.py
src/raspberry_car/include/: actuators.h  attitude_estimator.h  camera.h  defs.h  lights.h  motors.h  web_service.h
src/raspberry_car/main/: attitude_estimator.cpp  camera.cpp  main.cpp  motors.cpp  sensors.cpp
src/scripts/: imu_service.service  install-services.sh  install_services.sh  raspberry-car.service  raspberry_car.service  raspi-car.sh  raspi_car.sh  web-service.service  web_service.service
